fix sizing and spacing issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,7 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--color-primary-dark);
   text-shadow: var(--shadow-elevation-high);
   text-transform: uppercase;
+  margin-bottom: 0.5em;
 }
 
 h1 {
